Add Auslagen and Geldbusse. Split verfahrensdaten.instanzdaten in two entries.